# [[file:~/Workspace/Programming/zotero/zotero.note::*cargo][cargo:1]]
[package]
name = "zotero"
version = "0.0.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
structopt = "0.3"
dotenv = "0.9.0"
serde = {version="1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
gut = {version="0.1.3", package="gchemol-gut"}

[dev-dependencies]
# cargo:1 ends here
