# [[file:zotero.note::8b5019c9][8b5019c9]]
[package]
name = "libzotero"
version = "0.0.6"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
dotenv = "0.9.0"
serde = {version="1", features = ["derive"]}
serde_json = "1"
rust-ini = "0.15"
reqwest = { version = "0.10", features = ["blocking", "json"] }
gut = {version="0.1.3", package="gchemol-gut"}
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
tokio = {version = "1.0", features = ["full"]}
unicode-width = "0.1.7"

[dev-dependencies]
# 8b5019c9 ends here
